# avm

./: AbstractVM.hpp  AbstractVMExceptions.hpp  CMakeLists.txt  Factory.cpp  Factory.hpp  IOperand.hpp  Lexer.cpp  Lexer.h  Makefile  Operand.cpp  Operand.hpp  Parser.cpp  Parser.h  UsageInfo.txt  avm  main.cpp  test00
inc/: Factory.hpp  IOperand.hpp  Lexer.hpp  Operand.hpp  Parser.hpp
src/: Factory.cpp  Lexer.cpp  Parser.cpp  main.cpp
tests/: 13_print.avm
